--- a/css/home.css
+++ b/css/home.css
@@ -1,73 +1,4 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    /* font-family: 'Roboto', sans-serif; */
-    font-family: 'Roboto Serif', sans-serif;
-}
-html {
-    height: 100vh;
-    width: 100vw;
-}
-body {
-    background-color: #ff8e00;
-    background-image: url(../images/fondonaranjayblanco2.jpg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    width: 100%;
-}
-
-.nav-bar {
-    margin: 2vh 4vw;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-}
-.options{
-    background-color: #162e92;
-    /* background-image: url(../images/fondonaranjayblanco2.jpg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    width: 100%; */
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    position: fixed;
-    top: 22.5vh;
-    left:100%;
-    width: 100%;
-    height: calc(100vh - 22.5vh);
-    z-index: 2;
-    transition: left 0.3s;
-}
-.options_visible{
-    left: 0;
-}
-.logo {
-    padding: 2vh 2vw;
-}
-.Home, .Users, .Buy {
-    padding: 2.5vh;
-    border-radius: 25px;
-    transition: background-color 0.3s ;
-}
-.Home:hover, .Users:hover, .Buy:hover {
-    background-color: #ff8e00 ;
-    cursor: pointer;
-}
-.logo img   {
-    max-width: 20vh;
-}
-nav .bars{
-    background: none;
-    border: none;
-    font-size: 30px;
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    cursor: pointer;
- }
-
+/* style for the content part of the page */
 .information_CL {
     min-height: 50vh;
     margin: 10vh 5vw;
@@ -86,45 +17,29 @@ nav .bars{
 
 .btn-more_information{
     flex: 0 1 10vh;
+    display: flex;          /* el display flex se usa para ordenar el tag a*/
+    flex-flow: row nowrap;
+    align-items: center;
+    color: white;
+    cursor: pointer;
+    border: none;
     max-height: 15vh;
     font-size: 1.5em;
     text-align: center;
     padding: 1.5%;
     border-radius: 25px;
     background-color: #162e92;
-    border: none;
-    color: white;
-    cursor: pointer;
-    transition: box-shadow 0,3s;
+    transition: box-shadow 0.1s;
 }
 .btn-more_information:hover{
     box-shadow: 1px 2px 5px 1px black;
 }
-footer {
-    position: fixed;
-    bottom: 0px;
-    text-align: center;
-    width: 100%;
+a:link, a:visited, a:active {
+    text-decoration:none;
 }
 
-
 @media screen and (min-width: 610px) {
-    nav .bars{
-        display: none;
-    }
-    .options{
-        flex-flow: row nowrap;
-        justify-content: flex-end;
-        align-items: center;
-        background: none;
-        position: static;
-        width: 100%;
-        height: auto;
-        z-index: 1;
-        transition: none;
-    }
-
-    .information_CL {
+        .information_CL {
         min-height: 50vh;
         margin: 10vh 5vw;
         display: flex;
@@ -148,13 +63,5 @@ footer {
         padding-bottom: 0px;
 
     }
-    .Home:hover, .Users:hover, .Buy:hover {
-        background-color: #eee ;
-    }
+    
 }
-
-/* @media screen and (min-width: 813px) {
-    .CL_description{
-        font-size: 55px;
-    }
-} */
