--- a/css/estructuraBase.css
+++ b/css/estructuraBase.css
@@ -14,6 +14,7 @@ body {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 100%;
+    /* height: 96vh; */
 }
 header a:link,header a:visited,header a:active {
     text-decoration:none;
@@ -38,10 +39,10 @@ header {
     flex-flow: column nowrap;
     align-items: center;
     position: fixed;
-    top: 22.5vh;
+    top: 18vh;
     left:100%;
     width: 100%;
-    height: calc(100vh - 22.5vh);
+    height: calc(100vh - 18vh);
     z-index: 2;
     transition: left 0.3s;
 }
@@ -55,6 +56,7 @@ header {
     padding: 2.5vh;
     border-radius: 25px;
     transition: background-color 0.3s ;
+    font-size: calc(1em + 0.5vw);
 }
 .Home:hover, .Users:hover, .Buy:hover {
     background-color: #ff8e00 ;
@@ -67,18 +69,30 @@ header {
 nav .bars{
     background: none;
     border: none;
+    border-radius: 25px;
+    padding: 1vh;
     font-size: 30px;
     display: flex;
     justify-content: space-around;
     align-content: center;
     cursor: pointer;
+    transition: background-color 0.3s;
+
  }
+ nav .bars:hover{
+     background-color: #eee;
+ }
+
 
  footer {
     position: fixed;
     bottom: 0px;
     text-align: center;
     width: 100%;
+    background-color: #ff8e00;
+    height: 2vh;
+    padding-top: 0.5vh;
+    /* box-shadow: 1px 2px 2px 1px #162e92; */
 }
 
 @media screen and (min-width: 610px){
