--- a/css/estructuraBase.css
+++ b/css/estructuraBase.css
@@ -88,11 +88,11 @@ nav .bars{
     position: fixed;
     bottom: 0px;
     text-align: center;
+    font-size: calc(0.5em + 0.5vw + 0.5vh);
     width: 100%;
     background-color: #ff8e00;
     height: 2vh;
-    padding-top: 0.5vh;
-    /* box-shadow: 1px 2px 2px 1px #162e92; */
+    padding: 1vh;
 }
 
 @media screen and (min-width: 610px){
