--- a/css/home.css
+++ b/css/home.css
@@ -9,8 +9,7 @@
 }
 .CL_description{
     flex: 0 1 30vh;
-    font-size: calc(2em + 1vw);
-    min-width: 50vh;
+    font-size: calc(1em + 3vw);
     text-align: center;
     padding-bottom: 5vh;
 }
@@ -24,8 +23,10 @@
     cursor: pointer;
     border: none;
     max-height: 15vh;
-    font-size: 1.5em;
+    font-size: calc(1em + 1vw); 
+    text-transform: capitalize;  
     text-align: center;
+    margin-bottom: 5%;
     padding: 1.5%;
     border-radius: 25px;
     background-color: #162e92;
@@ -62,6 +63,9 @@ a:link, a:visited, a:active {
         text-align: center;
         padding-bottom: 0px;
 
+    }
+    .btn-more_information{
+        margin-bottom: 0        ;
     }
     
 }
