--- a/css/users.css
+++ b/css/users.css
@@ -156,8 +156,15 @@ table tbody .edit:hover, table tbody .delete:hover {
     min-height: 40vh;
     margin-bottom: 4vh;
 }
+.buttonsForm{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
 
-.addComment .sendForm{
+}
+.addComment .editButton{
     align-self: flex-end;
     width: 20vw;
     padding: 2%;
@@ -168,11 +175,12 @@ table tbody .edit:hover, table tbody .delete:hover {
     border: none;
     border-radius: 25px;
     margin-bottom: 5vh;
+    margin-left: 1vw;
     cursor: pointer;
     transition: box-shadow 0.2s;
 
 }
-.addComment .sendForm:hover{
+.addComment .editButton:hover{
     box-shadow: 0.5px 1px 3px 0.5px black;
 }
 /*estilo de la dicvión con el botón de clear*/
@@ -245,4 +253,7 @@ table tbody .edit:hover, table tbody .delete:hover {
     text-align: center;
     vertical-align: center;
     font-size: calc(1em + 0.5vw + 0.5vh);
+}
+.hide{
+    display: none;
 }
